2017-04-09  Per Bothner  <per@bothner.com>

	* bytevectors.scm (string->utf8): Moved to strings.scm.
	(utf16->string, utf16be->string, utf16le->string): New functions.
	* strings.scm (string->utf8): Moved from bytevectors.scm.
	(string->utf16, string->utf16be, string->utf16l2): New procedures.
	* kawa/base.scm: Export new functions.

2017-04-06  Per Bothner  <per@bothner.com>

	* bytevectors.scm (utf8->string): Update for renamed method.

2017-03-26  Per Bothner  <per@bothner.com>

	Add string-concatenate and string-concatenate-reverse procedures.
	Add string-join.
	* kawa/strings_ext.scm: New file.

2017-03-25  Per Bothner  <per@bothner.com>

	* strings.scm (reverse-list->string): Add SRFI-140 procedure.
	* kawa/base.scm: Export reverse-list->string.

2017-03-20  Per Bothner  <per@bothner.com>

	Change vector->string to (by default) return an istring.
	* kawa/istrings.scm (list->string): Re-implement using mstring.
	* strings.scm: Avdoid import of kawa.lib.characters.
	* kawa/mstrings.scm (vector->string): Move here ...
	* vectors.scm: ... instead of here.

2017-03-15  Per Bothner  <per@bothner.com>

	* strings.scm (string-replicate): New procedure.
	* kawa/base.scm: Define it by default.

	* strings.scm (make-string): Default count to zero.

2017-02-27  Per Bothner  <per@bothner.com>

	* kawa/string-cursors.scm (string-cursor-ref): Inline.
	Change to return #\ignorable-char if second char of surrogate pair.
	(string-cursor-next-quick): New function.

2017-02-25  Per Bothner  <per@bothner.com>

	* case_syntax.scm (<CaseClause>): Define using define-alias.
	Don't remember the reason ...

	* kawa/base.scm: Only export domterm-load-stylesheet
	if DomTermBackend exists.

2017-02-03  Per Bothner  <per@bothner.com>

	* prim_imports.scm (bitvector, c16vector): New type names.
	* kawa/base.scm (bitvector, c16vector): Export these.

2017-01-26  Per Bothner  <per@bothner.com>

	* misc_syntax.scm (module-class): New macro.
	* kawa/base.scm: Also export module-class.
